# ml-intro-rs-school

./: .gitignore
1 - Pandas data manipulations/: Pandas_data_manipulations_tasks.ipynb
2 - Descriptive Statistics and Data Exploration/: .gitignore  eda.ipynb
3 - Linear Regression/: linear_regression.ipynb
4 - Overfitting and Regularization/: overfitting_regularization.ipynb
5 - Classification Linear KNN/: hw_classification.ipynb
6 - Feature Engineering and Selection/: homework.ipynb
7 - Trees and Ensembles/: rf_classifier.ipynb
8 - Clustering and Dimensionality Reduction/: clustering.ipynb
9 - Evaluation Selection/: README.rst  mypy.ini  noxfile.py  pyproject.toml
9 - Evaluation Selection/my-package/: pyproject.toml
9 - Evaluation Selection/src/9 _ evaluation selection/: train.py
9 - Evaluation Selection/src/ml_forest/: data.py  eda.py  pipeline.py  train.py
9 - Evaluation Selection/tests/: test_9 _ evaluation selection.py  test_train.py
